fix: Jumping2 example

--- a/jumping/2.-example/style.css
+++ b/jumping/2.-example/style.css
@@ -4,9 +4,10 @@
   box-sizing: border-box;
 }
 body {
-  display: grid;
-  height: 100vh;
-  place-items: center;
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
   background: #8e44ad;
 }
 
